--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-	<title>Angular QuickStart</title>
+	<base href="/">
+	<title>A Plus Curator</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles.css">
