--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	<script src="js/uikit.min.js"></script>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
 	<!--<link rel="stylesheet" type="text/css" href="app/resources/icons/css/font-awesome.min.css" />-->
 	<link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
